Add Frontend: Navigation and Search Bus component
- Add navlinks for search bus, view status, specific bus details
- Add components for the above functionalities
- Add a custom http-req class to send fetch requests from a central component
- Add backend for searching bus query

--- a/frontend/src/components/SearchBus/SearchBus.css
+++ b/frontend/src/components/SearchBus/SearchBus.css
@@ -1,6 +1,14 @@
 .search-bus {
   height: 100vh;
+  overflow: auto;
   width: 80%;
-  color: aliceblue;
-  background-image: linear-gradient(to right, #000, #014373);
+  color: darkblue;
+}
+
+.search-field {
+  margin: 50px 0px;
+}
+
+.location-wrapper {
+  margin: 50px 70px 50px 200px;
 }
