--- a/frontend/src/components/SideNavigation/SideNavigation.css
+++ b/frontend/src/components/SideNavigation/SideNavigation.css
@@ -1,6 +1,6 @@
 .side-navigation {
   height: 100vh;
-  width: 20%;
+  width: 20% !important;
   color: aliceblue;
   border-radius: 0px 50px 50px 0px;
   background-image: linear-gradient(to right, #0d0d0d, #014373);
@@ -8,6 +8,7 @@
 
 .app-header {
   margin: 60px 0px;
+  text-align: center;
 }
 
 .NavLink {
@@ -17,6 +18,7 @@
   margin: 5px 10px;
   padding: 10px 20px;
   border-radius: 10px;
+  text-decoration: none;
 }
 
 .active-nav {
