--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 body {
   margin: 0;
+  font-family: 'Open Sans',Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
